# garden_dynamics

./: .env  .env_unix  .gitignore  LICENSE  README.md  garden_map.ipynb  main.py  pyproject.toml  range_list.toml
.github/: copilot-instructions.md  gtsam-solve-implementation.md
data_cache/: examples_gdf_trees.toml
datasets/: kadastralekaart_kadastralegrens.gml  kadastralekaart_perceel.gml
notebooks/: garden_map.ipynb
python/: field_parsers.py  garden_elements.py  garden_model_plots.py  geo_parsers.py  gtsam_position_refinement.py  parsers.py  ranging_correction.py
